@@ -1,3 +1,7 @@
+2019-11-08  Richard Sandiford  <richard.sandiford@arm.com>
+
+	* gcc.target/aarch64/sve/acle/general/inline_1.c: New test.
+
 2019-11-08  Richard Biener  <rguenther@suse.de>
 
 	PR tree-optimization/92324
